--- a/VisualInfo/Vextractor/Vextractor.csproj
+++ b/VisualInfo/Vextractor/Vextractor.csproj
@@ -96,6 +96,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="scores.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="SelectCandidate.cs" />
     <Compile Include="Template.cs" />
     <Compile Include="urltable.cs">
